--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMW Config</title>
+    <meta
+      name="description"
+      content="Customize your BMW with BMW Config, choosing from a range of colors, trims, and features for your perfect BMW." />
   </head>
   <body>
     <div id="root"></div>
